@@ -1,3 +1,8 @@
+2002-07-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* elfxx-ia64.c: (elfNN_ia64_modify_segment_map): Properly scan
+	PT_IA_64_UNWIND segments for a given section.
+
 2002-07-16  Moritz Jodeit  <moritz@jodeit.org>
 
 	* peXXigen.c (_bfd_XXi_swap_aouthdr_out): Correct order of memset args.
